--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -9,6 +9,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
+	
 </head>
 <body>
 <header>
@@ -37,10 +38,13 @@
 	<section id="portfolio">
 		<h2>Mes Projets</h2>
 		<div class="gallery">
-			<figure>
+
+			<!-- <figure>
 				<img src="assets/images/abajour-tahina.png" alt="Abajour Tahina">
-				<figcaption>Abajour Tahina</figcaption>
+				<figcaption>work.title</figcaption>
 			</figure>
+
+
 			<figure>
 				<img src="assets/images/appartement-paris-v.png" alt="Appartement Paris V">
 				<figcaption>Appartement Paris V</figcaption>
@@ -80,7 +84,7 @@
 			<figure>
 				<img src="assets/images/hotel-first-arte-new-delhi.png" alt="Hotel First Arte - New Delhi">
 				<figcaption>Hotel First Arte - New Delhi</figcaption>
-			</figure>
+			</figure> -->
 		</div>
 	</section>
 	<section id="contact">
@@ -105,5 +109,6 @@
 		</ul>
 	</nav>
 </footer>
+<script src="./assets/index.js"></script>
 </body>
 </html>
