add portfolio index.html

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -84,7 +84,8 @@
 			<figure>
 				<img src="assets/images/hotel-first-arte-new-delhi.png" alt="Hotel First Arte - New Delhi">
 				<figcaption>Hotel First Arte - New Delhi</figcaption>
-			</figure> -->
+			</figure> 
+			<section class="figure"></section>-->
 		</div>
 	</section>
 	<section id="contact">
