--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -16,7 +16,7 @@
 	<h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
 	<nav>
 		<ul>
-			<li>projets</li>
+			<li><a href="../index.html">projets</a></li>
 			<li>contact</li>
 			<li><a href="./assets/login.html" id="id_login">login</a></li>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
