add correction new image add on porfolio

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -41,11 +41,11 @@
 	<section id="introduction">
 		<figure>
 			<img src="./assets/images/sophie-bluel.png" alt="">
-			<i class="fa-solid fa-pen-to-square edit-icon"></i>
-			<a href="#modal1" class="js-modal header">modifier</a>
+			<i class="fa-solid fa-pen-to-square edit-icon edit-buttons"></i>
+			<a href="#modal1" class="js-modal header edit-buttons">modifier</a>
 				<aside id="modal1" class="modal" aria-hidden="true" role="dialog" aria-labelledby="titlemodal" style="display: none;">
 					<div class="modal-wrapper js-modal-stop">
-						<a href="#modal1" class="js-modal-close">
+						<a href="#modal1" class="js-modal-close" id="btnedit1">
 							<i class="fas fa-times"></i>
 						</a>
 						<h3 id="titlemodal">Galerie Photo</h3>
@@ -55,12 +55,12 @@
 						<a class="btn-clear-admin" href="#">Supprimer la galerie</a>
 							<aside id="modal2" class="modal" aria-hidden="true" role="dialog" aria-labelledby="titlemodal2" style="display: none;">
 								<div class="modal-wrapper js-modal-stop">
-									<div class="modale-projet-logo">
+									<div class="modale-content-container">
 										<a href="" class="js-modale-return">
 											<i class="fa-solid fa-arrow-left"></i>
 										</a>
 
-										<a href="#" class="js-modal-close">
+										<a href="#" class="js-modal-close" id="btnedit2">
 											<i class="fas fa-times"></i>
 										</a>
 									</div>
@@ -106,8 +106,8 @@
 	<section id="portfolio">
 		<div class="header">
 			<h2>Mes Projets</h2>
-			<i class="fa-solid fa-pen-to-square edit-icon"></i>
-			<a href="#modal1" class="js-modal">modifier</a>
+			<i class="fa-solid fa-pen-to-square edit-icon edit-buttons"></i>
+			<a href="#modal1" class="js-modal portfolio edit-buttons">modifier</a>
 			
 		</div>
 		
