--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -18,7 +18,7 @@
 		<i class="fa-solid fa-pen-to-square mode-edition-icon"></i>
 		<p>Mode édition</p>
 	</div>
-	<a href="../FrontEnd/assets/login.html">
+	<a href="../FrontEnd/login.html">
 		<button>Publier les changements</button>
 	</a>
 </aside>
@@ -28,9 +28,9 @@
 	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 	<nav>
 		<ul>
-			<li><a href="../index.html">projets</a></li>
+			<li><a href="../FrontEnd/index.html">projets</a></li>
 			<li>contact</li>
-			<li><a href="./assets/login.html">
+			<li><a href="./login.html">
 				<li class="js-alredy-logged">login</li>
 			</a>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
@@ -141,7 +141,7 @@
 		</ul>
 	</nav>
 </footer>
-<script src="./assets/index.js"></script>
+<script src="./assets/script/index.js"></script>
 
 </div>
 </body>
