--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -8,7 +8,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
         <meta name="description" content="">
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./assets/style.css">
         
     </head>
 <body>
@@ -16,10 +16,10 @@
     <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
   <nav>
     <ul>
-      <li><a href="../index.html">projets</a></li>
+      <li><a href="../FrontEnd/index.html">projets</a></li>
       <li>contact</li>
-      <li><a href="login.html">login</a></li>
-      <li><img src="./icons/instagram.png" alt="Instagram"></li>
+      <li><a href="../FrontEnd/login.html">login</a></li>
+      <li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
     </ul>
   </nav>
 </header>
@@ -47,7 +47,7 @@
     </nav>
   </footer>
 
-  <script src="./login.js"></script>
+  <script src="./assets/script/login.js"></script>
 </body>
 
 </html>
